--- a/core/web-assets/src/main/assets/js/apps/onms-requisitions/lib/views/quick-add-panel-basic.html
+++ b/core/web-assets/src/main/assets/js/apps/onms-requisitions/lib/views/quick-add-panel-basic.html
@@ -15,7 +15,7 @@
 </div>
 <div class="form-group">
   <label class="col-form-label" for="nodeLabel">Node Label</label>
-  <input class="form-control" type="text" id="nodeLabel" name="nodeLabel" placeholder="The Node Label" ng-model="node.nodeLabel" required
+  <input class="form-control" type="text" id="nodeLabel" name="nodeLabel" placeholder="The Node Label" ng-pattern="/^((?![&<>`&#34&#39]+).)*$/" ng-model="node.nodeLabel" required
          ng-class="{ 'is-invalid' : quickAddNodeForm.nodeLabel.$invalid }">
 </div>
 
